adding reservation_detail endpoint
